--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 body{
     background-color: #FFF4D8;
 }
+/**/
 header{
     margin:0 auto;
     background-image: url("../images/imgDondeCoste1.jpg");
@@ -12,14 +13,9 @@ header{
     background-size: contain;
     width: 100%;
     height: 200px;
-    padding:0;
-    padding-left: 1%;
-    padding-right: 1%;
-    display: flex;
-    flex-direction: column;
-    justify-content:flex-end;
+    position: relative;
 }
-
+/*Estiliza el párrafo del header*/
 header > p.headerMessage{
     width:fit-content;
     background-color: #ffffff;
@@ -30,8 +26,11 @@ header > p.headerMessage{
     margin:0;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-bottom: 1%;
+    position: absolute;
+    top:50%;
+    left: 3%;
 }
-
+/*centra el nav, le da color, padding*/
 nav{
     margin: 0 auto;
     background-color:#4175e4;
@@ -41,21 +40,26 @@ nav{
     overflow: hidden;
     height:fit-content;
     font-size: 1.5em;
+    position:absolute;
+    top: 100%;
 }
-nav .dropBtn{
-    background-color: #4175e4;
+/*las lineas en los menus*/
+hr.line{
+    margin: 0;
+}
+/*nav .dropBtn{
     text-align: center;
-
-}
-
+}*/
+/*Muestra el dropContent cuando se hacer click sobre el div .dropBtn*/
 nav .dropBtn:active + .dropContent{
     display:block;
 }
+/*Muestra el dropContent cuando se hacer el hover sobre el div .dropBtn*/
 nav .dropBtn:hover + .dropContent{
     display: block;
 }
-
-nav .dropContent a{
+/*Estiliza los componentes del menú*/
+nav a{
     display: block;
     text-align: center;
     text-decoration: none;
@@ -72,4 +76,20 @@ nav .dropContent:hover{
     display: block;
     width: 100%;
     text-align: center;
+}
+
+figure{
+    margin-top: 2%;
+    text-align: center;
+}
+
+figure img, figure figcaption{
+    width: 100%;
+    border: 1px #000000 solid;
+    margin: 0;
+    padding: 0;
+}
+
+@media screen and (min-width:760px){
+    
 }
