The nav letter bigger

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ nav{
     background-color:#4175e4;
     padding: 0.5%;
     color: #ffffff;
-    font-size: 1.5em;
+    font-size: 1.8em;
     width: 100%;
     position:absolute;
     top:100%;
@@ -56,9 +56,9 @@ hr.line{
     display:block;
 }*/
 /*Muestra el dropContent cuando se hacer el hover sobre el div .dropBtn*/
-/*nav .dropBtn:hover + .dropContent{
+nav .dropBtn:hover{
     display: block;
-}*/
+}
 /*Estiliza los componentes del menú*/
 nav a{
     display: block;
