--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,8 @@ nav{
     background-color:#4175e4;
     padding: 0.5%;
     color: #ffffff;
-    font-size: 1.8em;
     width: 100%;
+    font-size: 2em;
     position:absolute;
     top:100%;
 }
@@ -65,6 +65,7 @@ nav a{
     text-align: center;
     text-decoration: none;
     color: #ffffff;
+    margin: 0.5%;
 }
 nav .dropContent a:hover{
     background-color: #F2D12A;
