--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ header > p.headerMessage{
 /*centra el nav, le da color, padding*/
 nav{
     margin: 0 auto;
-    background-color:#4175e4;
+    background-color:#660101;
     padding: 0.5%;
     color: #ffffff;
     width: 100%;
