--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ header{
     background-position: center;
     background-size: contain;
     width: 100%;
-    height: 30vh;
+    height: 200px;
     position: relative;
 }
 /*Estiliza el párrafo del header*/
@@ -138,5 +138,54 @@ div.foodBox .description{
     padding: 10%;
 }
 @media screen and (min-width:760px){
-    
+    .container{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+    }
+    .container .option{
+        max-width: 48%;
+        min-width: 48%;
+        margin: 1%;
+        display: inline-block;
+    }
+    .container .foodBox{
+        max-width: 48%;
+        min-width: 48%;
+        padding: 0.5%;
+        margin: 1%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    div.foodBox .description, div.foodBox .foodImage{
+        width: 48%;
+        
+    }
+    div.foodBox .description{
+        font-size: 1em;
+        padding: 6%;
+    }
+    nav{
+        text-align: center;
+    }
+    nav .dropBtn{
+        display: none;
+    }
+    nav .dropContent{
+        display:block;
+    }
+    nav a:hover, nav a{
+        display: inline;
+        padding: 0.5%;
+        border-radius: 5%;
+    }
+    nav hr{
+        display: none;
+    }
+    nav .dropContent:hover{
+        display: inline;
+        text-align: center;
+    }
 }
