--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ div.foodBox .description, div.foodBox .foodImage{
 div.foodBox .description{
     padding: 10%;
 }
-@media screen and (min-width: 600px){
+@media (min-width: 600px){
     .container{
         display: flex;
         flex-direction: row;
@@ -190,5 +190,9 @@ div.foodBox .description{
     }
     header > p.headerMessage{
         font-size: 1.2em;
+    }
+    iframe{
+        width: 100%;
+        height: 90%;
     }
 }
