--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ header{
 /*Estiliza el párrafo del header*/
 header > p.headerMessage{
     width:fit-content;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     background-color: #ffffff;
     overflow: hidden;
     border-radius: 5%;
@@ -40,7 +40,7 @@ nav{
     padding: 0.5%;
     color: #ffffff;
     width: 100%;
-    font-size: 2em;
+    font-size: 2rem;
 }
 /*las lineas en los menus*/
 hr.line{
@@ -102,7 +102,8 @@ div a iframe{
 }
 
 div.option span{
-    font-size: 1.8em;
+    font-size: 1.8rem;
+    display: block;
 }
 
 footer p{
@@ -111,7 +112,7 @@ footer p{
     padding: 2%;
     color: #ffffff;
     text-align: center;
-    font-size: 2em;
+    font-size: 2rem;
 }
 
 div.foodBox{
@@ -131,11 +132,17 @@ div.foodBox .description, div.foodBox .foodImage{
     text-align: center;
     background-color:#660101;
     color: #ffffff;
-    font-size: 1.4em;
+    font-size: 1.4rem;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 div.foodBox .description{
     padding: 10%;
+}
+
+iframe{
+    display: block;
+    width: 100%;
+    height: 90%;
 }
 @media (min-width: 600px){
     .container{
@@ -164,7 +171,7 @@ div.foodBox .description{
         
     }
     div.foodBox .description{
-        font-size: 1em;
+        font-size: 1rem;
         padding: 6%;
     }
     nav{
@@ -189,10 +196,22 @@ div.foodBox .description{
         text-align: center;
     }
     header > p.headerMessage{
-        font-size: 1.2em;
+        font-size: 1.2rem;
+    }
+    div.option{
+        border: 1px #000000 solid;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: stretch;
+        align-content: stretch;
+    }
+    div.option span{
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     iframe{
-        width: 100%;
-        height: 90%;
+        display: block;
     }
 }
