--- a/css/style.css
+++ b/css/style.css
@@ -118,17 +118,17 @@ footer p{
 div.foodBox{
     margin-top: 2%;
     display: flex;
+    flex-direction: column-reverse;
     border: 2px #000000 solid;
     border-radius: 1%;
     padding: 1% 0% 1% 0%;
 }
 
 div.foodBox .description, div.foodBox .foodImage{
-    width: 45%;
-    margin: 0;
+    width: 90%;
+    display: block;
     border: 2px #000000 solid;
-    border-radius: 2%;
-    margin: 1% auto;
+    margin: 0% auto 0% auto;
     text-align: center;
     background-color:#660101;
     color: #ffffff;
@@ -145,7 +145,7 @@ iframe{
     height: 90%;
 }
 
-@media (min-width: 600px){
+@media (min-width: 768px){
     .container{
         display: flex;
         flex-direction: row;
